--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
     "no-use-before-define": ["error", { "variables": false }],
     "no-multi-str": 0,
+    "func-names": "off"
   },
   "env": {
     "node": true,
